# ds_NitinKausikRemella

./: .gitignore  README.md  notebook.ipynb  notebook2.ipynb  pyproject.toml
csv_files/: fear_data_inter.csv  historical_data_inter.csv
